# bam-window

./: .gitignore  CMakeLists.txt  Makefile  README.md  bam-window  bamwindow.c
cmake/: GitHelper.cmake
debian/: changelog  control  copyright  rules
debian/patches/: 0001-replace-makefile-with-something-less-TGI-specific.patch  01-Makefile-builds-samtools.diff  series
debian/source/: options
src/: BamEntry.cpp  BamEntry.hpp  BamFilter.hpp  BamHeader.cpp  BamHeader.hpp  BamReader.cpp  BamReader.hpp  BamWindow.cpp  BamWindow.hpp  CMakeLists.txt  ColumnAssigner.cpp  ColumnAssigner.hpp  MurmurHash2.hpp  Options.cpp  Options.hpp  RowAssigner.cpp  RowAssigner.hpp  StreamJoin.hpp  TableBuilder.hpp  WarningCollector.cpp  WarningCollector.hpp  main.cpp  version.h.in
src/test/: CMakeLists.txt  MockEntry.hpp  TestColumnAssigner.cpp  TestRowAssigner.cpp  TestTableBuilder.cpp
